@@ -42,10 +42,11 @@ namespace libtorrent { namespace dht
 
 struct node_entry
 {
-	node_entry(node_id const& id_, udp::endpoint ep, bool pinged = false)
+	node_entry(node_id const& id_, udp::endpoint ep, int roundtriptime = 0xffff, bool pinged = false)
 		: addr(ep.address())
 		, port(ep.port())
 		, timeout_count(pinged ? 0 : 0xffff)
+		, rtt(roundtriptime)
 		, id(id_)
 	{
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
@@ -57,6 +58,7 @@ struct node_entry
 		: addr(ep.address())
 		, port(ep.port())
 		, timeout_count(0xffff)
+		, rtt(0xffff)
 		, id(0)
 	{
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
@@ -66,6 +68,7 @@ struct node_entry
 
 	node_entry()
 		: timeout_count(0xffff)
+		, rtt(0xffff)
 		, id(0)
 	{
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
@@ -80,6 +83,11 @@ struct node_entry
 	void reset_fail_count() { if (pinged()) timeout_count = 0; }
 	udp::endpoint ep() const { return udp::endpoint(addr, port); }
 	bool confirmed() const { return timeout_count == 0; }
+	void update_rtt(int new_rtt)
+	{
+		if (rtt == 0xffff) rtt = new_rtt;
+		else rtt = int(rtt) / 3 + int(new_rtt) * 2 / 3;
+	}
 
 	// TODO: replace with a union of address_v4 and address_v6
 	address addr;
@@ -87,6 +95,8 @@ struct node_entry
 	// the number of times this node has failed to
 	// respond in a row
 	boost::uint16_t timeout_count;
+	// the average RTT of this node
+	boost::uint16_t rtt;
 	node_id id;
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
 	ptime first_seen;
